[tool.poetry]
name = "alien"
version = "1.1.2"
description = "Active Learning In data ExploratioN"
authors = ["Sanofi"]
packages = [{ include = 'alien' }]
repository = "https://github.com/Sanofi-GitHub/UDS-active_learning_sdk/"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.2,<3.11"
numpy = ">=1.22.3"
scipy = ">=1.6"
scikit-learn = ">=1.1"
matplotlib = ">=3.5.2"
ipython = ">=8.2.0"
joblib = ">=1.0"
pandas = ">=1.3"
torch = { version = "^1.12", optional = true }
pytorch-lightning = { version = "^1.8.6", optional = true }
pytdc = "^0.3.8"
deepchem = { version = "^2.6.0", optional = true }
tensorflow = { version = "2.12", optional = true }
dgl = { version = "^1.0.1", optional = true }
dgllife = { version = "^0.3.2", optional = true }
deprecated = ">=1.2"

[tool.poetry.extras]
deepchem = ["deepchem"]
torch = ["torch", "pytorch-lightning"]
tensorflow = ["tensorflow"]
deepchem-torch = ["torch", "pytorch-lightning", "deepchem", "dgl", "dgllife"]
deepchem-tensorflow = ["deepchem", "tensorflow"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pylint = "^2.16.2"
pytest = "^7.2.1"
pre-commit = "^3.0.4"
pytest-cov = "^4.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"
sphinx-rtd-theme = ">=1.0.0"
sphinxcontrib-napoleon = ">=0.7"
sphinxcontrib-confluencebuilder = "^2.0.0"
tomli = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = "--cov=alien/ --cov-report xml:cov.xml --cov-fail-under=70"

[tool.coverage.run]
# relative_files = true
include = ["alien/"]
omit = ["alien/classes.py"]

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
known_first_party = ["alien"]

[tool.pylint.main]
fail-under = 7

[tool.pylint.basic]
good-names = ["a", "i", "j", "k", "n", "v", "x", "y", "N", "X", "dc", "db"]
max-line-length = 120

[tool.pylint."messages control"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "logging-fstring-interpolation",
]

[tool.pylint.typecheck]
generated-members = "numpy.*, torch.*"